package behavior.observer.ca6;

public interface PlayerDataListener {
    public void listen(PlayerData data);
}
